--- a/admin_section/templates/dashboard/influencers-insta.html
+++ b/admin_section/templates/dashboard/influencers-insta.html
@@ -52,7 +52,7 @@
         <!-- /.card-body -->
       </div>
       <!-- /.card -->
-     <center> <button class="btn btn-primary" type="button" disabled>
+     <center id='hdiv'> <button class="btn btn-primary" type="button" disabled>
         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
         Loading...
       </button>
@@ -133,7 +133,10 @@
                     // end here
                     window.addEventListener("load" , start_func())
 
+                  
+
                   }
+                 
             }
         });
   }
