--- a/admin_section/templates/dashboard/single-channel-yt.html
+++ b/admin_section/templates/dashboard/single-channel-yt.html
@@ -105,8 +105,15 @@
 
       {% comment %} {% if influencers != None %} {% endcomment %}
       <tbody id="myBody">
+        
           </tbody>
+          
         </table>
+        <center id="hdiv"> <button class="btn btn-primary my-2" type="button" disabled>
+          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+          Loading...
+        </button>
+      </center>      
 </div>
              
                 
