--- a/admin_section/templates/dashboard/single-page-insta.html
+++ b/admin_section/templates/dashboard/single-page-insta.html
@@ -1,5 +1,58 @@
+
 {% extends 'base/admin-base.html' %}
 {% block content %}
+
+<style>
+
+  .main-body {
+      padding: 15px;
+  }
+  .card {
+      box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+  }
+  
+  .card {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      min-width: 0;
+      word-wrap: break-word;
+      background-color: #fff;
+      background-clip: border-box;
+      border: 0 solid rgba(0,0,0,.125);
+      border-radius: .25rem;
+  }
+  
+  .card-body {
+      flex: 1 1 auto;
+      min-height: 1px;
+      padding: 1rem;
+  }
+  
+  .gutters-sm {
+      margin-right: -8px;
+      margin-left: -8px;
+  }
+  
+  .gutters-sm>.col, .gutters-sm>[class*=col-] {
+      padding-right: 8px;
+      padding-left: 8px;
+  }
+  .mb-3, .my-3 {
+      margin-bottom: 1rem!important;
+  }
+  
+  .bg-gray-300 {
+      background-color: #e2e8f0;
+  }
+  .h-100 {
+      height: 100%!important;
+  }
+  .shadow-none {
+      box-shadow: none!important;
+  }
+
+</style>
 
 <div class="container">
     <div class="main-body">
@@ -17,82 +70,50 @@
           <div class="row gutters-sm">
             <div class="col-md-3 mb-3">
               <div class="card">
-                <div class="card-body">
-                  <div class="d-flex flex-column align-items-center text-center">
-                    {% comment %} <img src={{profilepic}}  class="rounded-circle" width="150"> {% endcomment %}
-                    <div class="mt-3">
-                      <h5>{{FullName}}</h5>
-                      <a href={{PageURL}}  target="_blank" class="text-secondary mb-1">{{username}}</a>
-                      <p class="text-secondary mb-1">Location: {{Location}}</p>
-                      <p class="text-muted font-size-sm">Total Posts: {{PostsCount}}</p>
-                      <a class="btn btn-primary" target="_blank" href='{{PageURL}}'>Open on Instagram</a>
-                    </div>
-                  </div>
+                <div class="card-body" id="myBody">
+                  
                 </div>
               </div>
             
             </div>
+
+            <!-- table div -->
             <div class="col-md-9">
               <div class="card mb-3">
                 <div class="card-body">
 
-<div class="card-body p-0">
-  <table class="table table-striped projects">
-      <thead>
-          <tr>
-            
-              <th style="width: 35%">
-                Tiles
-              </th>
-              <th style="width: 15%">
-                Comments	
-              </th>
-              <th style="width: 25%"  >
-                Publishing Date
-              </th>
-              <th style="width: 10%" class="text-center">
-                Likes  	
-              </th>
-             
-          </tr>
-      </thead>
+                <div class="card-body p-0">
+                  <table class="table table-striped projects">
+                            <thead>
+                                <tr>
+                                  
+                                    <th style="width: 35%">
+                                      Tiles
+                                    </th>
+                                    <th style="width: 15%">
+                                      Comments	
+                                    </th>
+                                    <th style="width: 25%"  >
+                                      Publishing Date
+                                    </th>
+                                    <th style="width: 10%" class="text-center">
+                                      Likes  	
+                                    </th>
+                                  
+                                </tr>
+                            </thead>
 
-      {% comment %} {% if influencers != None %} {% endcomment %}
-      <tbody>
-        {% for Post in Posts %}
-        <tr>
-              <td>
-                  <a target='_blank' href='https://www.instagram.com/p/{{Post.shortcode}}'>
-                    https://www.instagram.com/p/{{Post.shortcode}}
-
-                  </a>
-                
-              </td>
-           
-              <td class="project_progress">
-                <li class="list-inline-item">
-                  <a>  {{Post.comments }}</a>
-                </li>
-              </td>
-          
-              <td class="project_progress">
-                <li class="list-inline-item">
-                  <a>  {{Post.date }}</a>
-                </li>
-              </td>
-
-              <td class="">
-                <a>{{Post.likes}}</a>
-            </td>
-
-             
-            </tr>
-          
-            {% endfor %}
-          </tbody>
-        </table>
-</div>
-             
+                            {% comment %} {% if influencers != None %} {% endcomment %}
+                            <tbody id="table_body">
+                            
+                            </tbody>
+                    </table>
+                </div>
+                <center id="hdiv"> <button class="btn btn-primary my-2" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
+              </center>              
                 
                 </div>
               </div>
@@ -105,56 +126,101 @@
         </div>
     </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <style>
+<form action="" method="POST">
+  {% csrf_token %}
+  <input type="hidden" name="ids" id="ids" value="{{id}}">
+</form>  
+<script>
+// get_data() is a function used to get data from SinglePageInsta 
+function get_data(){
+  
+  
+  $.ajax({
+            url: "{% url 'admin_section:insta-view' %}" ,
+            type: "POST",
+            data: {
+                security_code:$("input[name='ids']").val(),
+                csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()
+            },
+            success: function (data) { 
+          
+            var get_div = document.getElementById('myBody')
+            row = `
+            <div class="d-flex flex-column align-items-center text-center">
+                    {% comment %} <img src=${data.profilepic}  class="rounded-circle" width="150"> {% endcomment %}
+                    <div class="mt-3">
+                      <h5>${data.FullName}</h5>
+                      <a href=${data.PageURL}  target="_blank" class="text-secondary mb-1">{{username}}</a>
+                      <p class="text-secondary mb-1">Location: ${data.Location}</p>
+                      <p class="text-muted font-size-sm">Total Posts: ${data.PostsCount}</p>
+                      <a class="btn btn-primary" target="_blank" href='${data.PageURL}'>Open on Instagram</a>
+                    </div>
+              </div>
+            `
+            get_div.innerHTML += row
 
-        .main-body {
-            padding: 15px;
-        }
-        .card {
-            box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-        }
-        
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            min-width: 0;
-            word-wrap: break-word;
-            background-color: #fff;
-            background-clip: border-box;
-            border: 0 solid rgba(0,0,0,.125);
-            border-radius: .25rem;
-        }
-        
-        .card-body {
-            flex: 1 1 auto;
-            min-height: 1px;
-            padding: 1rem;
-        }
-        
-        .gutters-sm {
-            margin-right: -8px;
-            margin-left: -8px;
-        }
-        
-        .gutters-sm>.col, .gutters-sm>[class*=col-] {
-            padding-right: 8px;
-            padding-left: 8px;
-        }
-        .mb-3, .my-3 {
-            margin-bottom: 1rem!important;
-        }
-        
-        .bg-gray-300 {
-            background-color: #e2e8f0;
-        }
-        .h-100 {
-            height: 100%!important;
-        }
-        .shadow-none {
-            box-shadow: none!important;
-        }
+            function start_func(){ 
+                                $.ajax({
+                                    url: "{% url 'admin_section:get_Insta_post' %}",
+                                    type: "POST",
+                                    data: {
+                                        security_code:$("input[name='ids']").val(),
+                                        csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()
+                                    },
+                                    success: function (data) { 
+                                      console.log(data)
+                                      var table =   document.getElementById('table_body')
+                                      
+                                      for (var i = 0; i < data.Post.length; i++){
 
-    </style>
+                                        tb_row = `
+                                      <tr>
+                                          <td>
+                                              <a target='_blank' href='https://www.instagram.com/p/${data.Post[i].shortcode}'>
+                                                https://www.instagram.com/p/${data.Post[i].shortcode}
+
+                                              </a>
+                                          </td>
+                                      
+                                          <td class="project_progress">
+                                            <li class="list-inline-item">
+                                              <a>  ${data.Post[i].comments}</a>
+                                            </li>
+                                          </td>
+                                      
+                                          <td class="project_progress">
+                                            <li class="list-inline-item">
+                                              <a>  ${data.Post[i].PublishDate}</a>
+                                            </li>
+                                          </td>
+
+                                          <td class="">
+                                            <a>${data.Post[i].Likes}</a>
+                                        </td>
+                                      </tr>          
+                                            `
+                                  table.innerHTML += tb_row  
+
+
+                                      }
+                                      $("#hdiv").hide()
+                                       
+                                    }
+                                });
+                              }
+
+            
+              window.addEventListener("load" , start_func())
+
+
+            } 
+        }); 
+}
+
+window.addEventListener("load" , get_data())
+</script>
+
+    
 {% endblock %}
