--- a/home/templates/base/base.html
+++ b/home/templates/base/base.html
@@ -216,6 +216,9 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
+  <script src="//code.tidio.co/9pacbmnufyhgtp8eqtjjfzuxyz0lf9na.js" async></script>
+  
   <script src={% static 'assets/js/script.js' %}></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
